syntax = "proto3";

option csharp_namespace = "Jobly.Protobufs.Users";

message UserExistenceRequest {
	string userId = 1;
}

message UserExistenceResponse {
	bool exists = 1;
}

message CompanyExistenceRequest {
	string companyId = 1;
}

message CompanyExistenceResponse {
	bool exists = 1;
}
