syntax = "proto3";

option csharp_namespace = "Jobly.Protobufs.Users.Server";

import "Users/users.proto";

service UsersGrpcService {
	rpc IsUserExists (UserExistenceRequest) returns (UserExistenceResponse);
	rpc IsCompanyExists (CompanyExistenceRequest) returns (CompanyExistenceResponse);
	rpc GetResume (GetResumeRequest) returns (GetResumeResponse);}